@@ -246,7 +246,7 @@ val_find_signer(enum val_classification subtype, struct query_info* qinf,
 		*signer_name = NULL;
 		*signer_len = 0;
 	} else {
-		verbose(VERB_ALGO, "find_signer: could not find signer name"
+		verbose(VERB_DETAIL, "find_signer: could not find signer name"
 			" for unknown type response");
 		*signer_name = NULL;
 		*signer_len = 0;
@@ -394,7 +394,7 @@ val_verify_new_DNSKEYs(struct region* region, struct module_env* env,
 	if(dnskey_rrset->rk.dname_len != ds_rrset->rk.dname_len ||
 		query_dname_compare(dnskey_rrset->rk.dname, ds_rrset->rk.dname)
 		!= 0) {
-		verbose(VERB_ALGO, "DNSKEY RRset did not match DS RRset "
+		verbose(VERB_DETAIL, "DNSKEY RRset did not match DS RRset "
 			"by name");
 		return key_entry_create_bad(region, ds_rrset->rk.dname,
 			ds_rrset->rk.dname_len, 
@@ -436,7 +436,7 @@ val_verify_new_DNSKEYs(struct region* region, struct module_env* env,
 			rrset_get_ttl(ds_rrset));
 	}
 	/* If any were understandable, then it is bad. */
-	verbose(VERB_ALGO, "Failed to match any usable DS to a DNSKEY.");
+	verbose(VERB_DETAIL, "Failed to match any usable DS to a DNSKEY.");
 	return key_entry_create_bad(region, ds_rrset->rk.dname,
 		ds_rrset->rk.dname_len, ntohs(ds_rrset->rk.rrset_class));
 }
@@ -600,6 +600,11 @@ val_check_nonsecure(struct val_env* ve, struct reply_info* rep)
 			 * But this rrset did not verify.
 			 * Therefore the message is bogus.
 			 */
+			log_nametypeclass(VERB_DETAIL, "message is bogus, "
+				"non secure rrset",
+				rep->rrsets[i]->rk.dname, 
+				ntohs(rep->rrsets[i]->rk.type),
+				ntohs(rep->rrsets[i]->rk.rrset_class));
 			rep->security = sec_status_bogus;
 			return;
 		}
